--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "chart.js": "^4.4.3",
+    "chartjs-plugin-annotation": "^3.0.1",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-gauge-component": "^1.2.21",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.24.1",
     "socket.io-client": "^4.7.5",
+    "tailwind-merge": "^2.3.0",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
